# grind

./: .gitignore  README.md  pyproject.toml
.grind/verify/: github_cli.auth_status.json  github_cli.cli_help.json  github_cli.model_smoke.json  github_cli.permission_flags.json  kilo_cli.agent_presence.json  kilo_cli.auth_list.json  kilo_cli.identity_source.json  kilo_cli.json_smoke.json  kilo_cli.model_catalog.json  kilo_cli.permission_audit.json  kilo_cli.run_help.json
src/grind/: __init__.py  cli.py  config.py
src/grind/artifacts/: __init__.py  store.py
src/grind/engine/: __init__.py  checkpoints.py  difference_surface_builder.py  evidence_verifier.py  leases.py  orchestrator.py  state_machine.py
src/grind/models/: __init__.py  adjudication.py  artifact.py  checkpoint.py  difference_surface.py  disposition.py  enums.py  finding.py  invariant.py  model_call.py  operator_action.py  retrieval.py  run.py  run_lease.py  semantic_audit.py  stable_id.py  stage.py  task.py  transition.py  validation.py  worker.py
src/grind/policy/: __init__.py  loader.py  models.py
src/grind/providers/: __init__.py  runtime.py
src/grind/retrieval/: __init__.py  embeddings.py  service.py
templates/policy/: project.yaml
tests/: test_cli.py  test_config.py  test_difference_surface_builder.py  test_domain_models.py  test_evidence_verifier.py  test_integration.py  test_leases.py  test_policy.py  test_runtime.py  test_stable_id.py  test_state_machine.py  test_state_store.py  test_validation.py  test_validation_runner.py  test_verification_models.py  test_verification_service.py
(+20 files in other folders)
